@@ -1,3 +1,7 @@
+2007-06-14  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* cthread_internals.h (cproc_block): Add prototype.
+
 2002-08-26  Roland McGrath  <roland@frob.com>
 
 	* cthreads.c (cthread_body) [HAVE_USELOCALE]: Call uselocale to
